# supercon-workshop-embedded-rust

./: .gitattributes  .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
.scripts/: entrypoint.sh
slides/: Slides.pptx
workspace/: default.code-workspace
workspace/apps/: README.md
workspace/apps/blinky/src/: main.rs
workspace/apps/ex-1-blinky/: Cargo.toml
workspace/apps/ex-1-blinky/.cargo/: config.toml
workspace/apps/ex-1-blinky/src/: main.rs
workspace/apps/ex-2-ownership-and-borrowing/: Cargo.toml
workspace/apps/ex-2-ownership-and-borrowing/src/: main.rs
workspace/apps/solution-button-demo/: Cargo.toml
workspace/apps/solution-button-demo/src/: main.rs
workspace/apps/solution-debounce-demo/: Cargo.toml
workspace/apps/solution-debounce-demo/src/: main.rs
workspace/apps/solution-led-wrapper/: Cargo.toml
workspace/apps/solution-led-wrapper/src/: main.rs
workspace/apps/solution-tmp102-demo/: Cargo.toml
workspace/apps/solution-tmp102-demo/src/: main.rs
workspace/libraries/: README.md
